[gd_scene load_steps=10 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Jumping-Game.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Start.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Start1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Infos.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/Infos1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Steuerung1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/Steuerung.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=9]

[node name="TitleScreen" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 84.0
margin_top = 20.0
margin_right = 556.0
margin_bottom = 300.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 472.0
margin_bottom = 102.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 151.0
margin_top = 118.0
margin_right = 320.0
margin_bottom = 274.0
size_flags_horizontal = 4

[node name="Start" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 169.0
margin_bottom = 47.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="Infos" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 169.0
margin_bottom = 98.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="Steuerung" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 169.0
margin_bottom = 156.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 9 )
centered = false
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Infos" to="." method="_on_Infos_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Steuerung" to="." method="_on_Steuerung_pressed"]
